# ep202512-modbus-rtu-reader

./: README.md  main.py  pyproject.toml
src/: __main__.py  main.py
